Fixed logo so that it displays, added colour scheme, left aligned title and call to action. Undecided on picture, it doesn't really work..

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.root,
+#root,
+#docs-root {
+  --primary: #25adaf;
+  --secondary: #296364;
+  --accent: #718096;
+  --background: #fff;
+  --main: #1a1417;
+  --header: #2d3748;
+}
